fixed issues in chatbot

--- a/frontend/weather.html
+++ b/frontend/weather.html
@@ -1338,9 +1338,9 @@
         let translations = null;
         
         // API key provided by user
-        const API_KEY = '0ffe4b07e3a4446dcf5a2189ed7e7d03';
+        const API_KEY = 'your api key'
         // Backup API key in case the primary one fails
-        const BACKUP_API_KEY = '1c9770dfaf3b327dd03510a4c07b7f2d';
+        const BACKUP_API_KEY ='your backup api key';
         
         // Default location (Chennai, Tamil Nadu)
         let defaultLocation = 'Chennai,Tamil Nadu,IN';
