--- a/frontend/market-prices.html
+++ b/frontend/market-prices.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Market Prices - SmartUzhavan">
   <title>Market Prices - SmartUzhavan</title>
   
@@ -25,8 +25,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../styles.css">
-  <link rel="stylesheet" href="../market-prices.css"/>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/market-prices.css">
+  <link rel="stylesheet" href="css/market-header.css">
   
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -185,13 +186,13 @@
   </main>
   
   <footer>
-    <p>&copy; <span id="year"></span> Farmer Dashboard | Data Source: <a href="https://data.gov.in/" target="_blank">data.gov.in</a></p>
+    <p>&copy; <span id="year"></span> Farmer Dashboard | Data Source: <a href="https://data.gov.in/" target="_blank" rel="noopener noreferrer">data.gov.in</a></p>
   </footer>
   
   <!-- Navbar Loader -->
   <script src="js/navbar-loader.js"></script>
   
-  <script src="market-prices.js" defer></script>
+  <script src="js/market-prices.js" defer></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
